Fix weird alignment of add new meaning button

--- a/app/styles/modules/_edit-definition.scss
+++ b/app/styles/modules/_edit-definition.scss
@@ -70,6 +70,10 @@
   }
 }
 
+.newWord .submitProposal {
+  margin-left: 20px;
+}
+
 
 .edit-link span {
   font-size: 1px;
