--- a/app/styles/pages/_definition.scss
+++ b/app/styles/pages/_definition.scss
@@ -154,6 +154,7 @@ span.quotemark {
   background: #FFF;
   box-shadow: none;
   color: $dark-green;
+  float: right;
   text-shadow: none;
   &:hover {
     background: #FFF;
